Thu Nov 26 12:40:18 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/examples/Hello/Receiver/Hello_Receiver_exec.cpp:
          Resolved test errors. Expected samples should always be in the
          deployment plan.

        * connectors/dds4ccm/examples/Hello/descriptors/1_to_5.cdp:
          Added expected samples.

        * connectors/dds4ccm/tests/KeyedWriter/descriptors/Plan.cdp:
        * connectors/dds4ccm/tests/KeyedWriter/descriptors/USER_QOS_PROFILES.xml:
          Resolved test error by adding qos_profile to the deployment plan.

Thu Nov 26 12:18:07 UTC 2009  Marcel Smit  <msmit@remedy.nl>


        * connectors/dds4ccm/examples/Quoter/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/examples/Shapes/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/Get_Connection_Test/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/KeyedSamples/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/NonChangeableAttribute/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/On_Inconsistent_Topic/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/SetConnectorAttributes/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/UnkeyedSamples/descriptors/USER_QOS_PROFILES.xml:
        * connectors/dds4ccm/tests/UnkeyedWriter/descriptors/USER_QOS_PROFILES.xml:
          Removed these files since the default qos is coded.

Thu Nov 26 12:12:36 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/KeyedSamples/Receiver/Keyed_Test_Receiver_exec.cpp:
          Resolved compiler warnings on linux.

Thu Nov 26 11:43:12 UTC 2009  Marcel Smit  <msmit@remedy.nl>

        * connectors/dds4ccm/tests/Get_Connection_Test/Receiver/Get_Connection_Test_Receiver_exec.cpp:
        * connectors/dds4ccm/tests/Get_Connection_Test/Sender/Get_Connection_Test_Sender_exec.cpp: